testsuite/tests/interpreter_errors/constructor_call/invalid_kind_name/test.out
script.lkql:1:22: error: Invalid kind name
  1 | val impossible = new IntegerLit("56")
    |                      ^^^^^^^^^^
